--- a/views/api/api.html.twig
+++ b/views/api/api.html.twig
@@ -1,7 +1,7 @@
 [
-{% for article in articles %}
+{% for loisir in loisirs %}
 
-    {"number":{{ article.id }},"name":"{{ article.title }}","address":"RUE DES CHAMPEAUX (PRES DE LA GARE ROUTIERE) - 93170 BAGNOLET","position":{"lat":{{ article.position|slice(0, 8) }} , "lng":{{ article.position|slice(9, 8) }}},"banking":true,"bonus":true,"status":"OPEN","contract_name":"Paris","bike_stands":50,"available_bike_stands":46,"available_bikes":4,"last_update":1511264149000},
+    {"number":{{ loisir.id }},"name":"{{ loisir.title }}","address":"RUE DES CHAMPEAUX (PRES DE LA GARE ROUTIERE) - 93170 BAGNOLET","position":{"lat":{{ loisir.position|slice(0, 8) }} , "lng":{{ loisir.position|slice(9, 8) }}},"banking":true,"bonus":true,"status":"OPEN","contract_name":"Paris","bike_stands":50,"available_bike_stands":46,"available_bikes":4,"last_update":1511264149000},
 {% endfor %}
 {"number":31705,"name":"31705 - CHAMPEAUX (BAGNOLET)","address":"RUE DES CHAMPEAUX (PRES DE LA GARE ROUTIERE) - 93170 BAGNOLET","position":{"lat":48.8645278209514,"lng":2.416170724425901},"banking":true,"bonus":true,"status":"OPEN","contract_name":"Paris","bike_stands":50,"available_bike_stands":46,"available_bikes":4,"last_update":1511264149000}]
 
