--- a/web/css/style.css
+++ b/web/css/style.css
@@ -77,6 +77,9 @@ h2 {
 #menu-mobile {
     display: none;
 }
+#menu-close {
+    display: none;
+}
 
 .title {
     margin: 15px;
@@ -103,10 +106,12 @@ a {
 }
 
 ul {
+    display: inline;
     list-style: none;
     text-align: right;
     margin: 1px;
     font-size: 1.2em;
+    margin-top: 16px;
 }
 
 li {
@@ -133,16 +138,8 @@ li a:hover {
     right: 0px;
 }
 
-#menu-header-scrollBas {
-    display: none;
-    justify-content: space-between;
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    height: 30px;
-    background-color: white;
-    box-shadow: 0px 1px 12px 0 rgba(0, 0, 0, 0.1);
+nav {
+    display: contents;
 }
 
 /* Section 1 */
@@ -202,6 +199,10 @@ li a:hover {
 .fa-moyen {
     font-size: 21px;
     margin-left: 12px;
+}
+
+.parasol {
+    width: 40px;
 }
 
 .sous-cat {
@@ -407,7 +408,6 @@ select {
 /* Main section 3 */
 
 #main {
-    margin-top: 80px;
     margin-bottom: 100px;
     margin-left: 10%;
 }
@@ -420,7 +420,6 @@ select {
     max-width: 800px;
 }
 .title-show {
-    margin-top: 80px;
     width: 75%;
 }
 .type {
@@ -537,9 +536,6 @@ div#page {
     text-align: center;
 }
 
-#none {
-    display: none;
-}
 
 .block {
     display: block;
@@ -549,11 +545,10 @@ div#page {
 /*Formats mobile*/
 @media screen and (max-width: 780px) {
 
-    #none {
-        display: block;
-    }
-
     /* menu */
+    .title {
+        display: none;
+    }
     nav {
         position: fixed;
         top: 0;
@@ -570,13 +565,6 @@ div#page {
         margin-top: 40px;
     }
 
-    #menu-header {
-        display: none;
-    }
-
-    #menu-header-scrollBas {
-        display: none;
-    }
 
     #menu-mobile {
         display: block;
@@ -607,6 +595,7 @@ div#page {
         font-size: 30px;
         margin: 0px;
         text-align: center;
+        width: 220px;
     }
 
     li a {
