Ajout du backend et commentaire

--- a/views/frontend/index.html.twig
+++ b/views/frontend/index.html.twig
@@ -39,12 +39,9 @@
 
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
     <script src="http://localhost/parcour-5/web/js/ajax.js"></script>
-    <script src="http://localhost/parcour-5/web/js/map.js"></script>
-    <script src="http://localhost/parcour-5/web/js/map-liste.js"></script>
-
     <script src="http://localhost/parcour-5/web/js/auto-complete.js"></script>
     <script type="text/javascript"
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCLCyZdCatCyO348_1vXQr4yEQkDheyQ3A&libraries=places&callback=initAutocomplete"
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCLCyZdCatCyO348_1vXQr4yEQkDheyQ3A&libraries=places&callback=initAutocomplete&"
             async defer></script>
 
 {% endblock %}
