--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -15,7 +15,7 @@
 <div id="menu-header">
     <h1>
         <a id="blue-menu5" class="title" href="#slide">
-            <img class="parasol" src="http://localhost/parcour-5/web/images/parasol-icon.png" alt="parasol" > Loisirs et Vacances
+           Loisirs et Vacances
         </a>
     </h1>
     <nav>
