--- a/views/frontend/unique.html.twig
+++ b/views/frontend/unique.html.twig
@@ -13,14 +13,14 @@
             <a href="#map"> Voire sur le plans </a>
 
 
-            <h3>Comments</h3>
+            <h3>Commentaires</h3>
             {% for comment in comments %}
-                <strong>{{ comment.author.username }}</strong> said : {{ comment.content }}<br>
+                <strong>{{ comment.author.username }}</strong> : {{ comment.content }}<br>
             {% else %}
-                No comments yet.
+                Aucun commentaire trouvez.
             {% endfor %}
 
-            <h3>Add a comment</h3>
+            <h3>Ajouter un commentaire</h3>
             {% if commentForm %}
                 {{ form_start(commentForm) }}
                 <div class="form-group">
@@ -32,7 +32,7 @@
                     }}) }}
                 </div>
                 <div class="form-group">
-                    <input type="submit" class="btn btn-primary" value="Publish comment" />
+                    <input type="submit" class="btn btn-primary" value="Publier" />
                 </div>
                 {{ form_end(commentForm) }}
                 {% for flashMessage in app.session.flashbag.get('success') %}
