--- a/views/backend/loisir_form.html.twig
+++ b/views/backend/loisir_form.html.twig
@@ -10,7 +10,7 @@
             {{ flashMessage }}
         </div>
     {% endfor %}
-
+<img src="{{ loisir.image }}">
     <div class="well">
         {{ form_start(loisirForm, { 'attr': {'class': 'form-horizontal'} }) }}
         <div class="form-group">
