--- a/views/frontend/_slide.html.twig
+++ b/views/frontend/_slide.html.twig
@@ -13,9 +13,9 @@
 
     <div id="img-slide2">
         <div class="texte-slide2">
-            <h2>Trois clics et c'est partie</h2>
+            <h2>Trois clics et c'est parti</h2>
             <p>Remplissez le formulaire si dessous et découvrez les loisirs, lieux touristiques et séjours.<br />
-                Une liste de suggestion de loisirs et vacances via le lien si dessous.</p>
+                Une liste de suggestion de loisirs et vacances via le lien ci dessous.</p>
             <a href="#main"><p class="rectangle">LISTE <i class="fa fa-angle-right fa-moyen" aria-hidden="true"></i></p></a>
         </div>
     </div>
