--- a/views/frontend/result.html.twig
+++ b/views/frontend/result.html.twig
@@ -1,16 +1,41 @@
 {% extends "/layout.html.twig" %}
 
 {% block content %}
+    <div class="title-show">
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        {% for loisirs in loisir %}
 
-<div id="mapInfo">
-    <div id="map"></div>
-    <div id="infoLoisirs">essai</div>
-</div>
+            {{ loisirs.title }}
 
-<!-- script qui appel la map -->
-<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyCLCyZdCatCyO348_1vXQr4yEQkDheyQ3A&callback=initMap"></script>
-<script src="http://localhost/parcour-5/web/js/ajax.js"></script>
-<script src="http://localhost/parcour-5/web/js/map-liste.js"></script>
-<script src="http://localhost/parcour-5/web/js/menu.js"></script>
+        {% endfor %}
+    </div>
+
+    <div id="mapInfo">
+        <div id="map"></div>
+        <div id="infoLoisirs">essai</div>
+    </div>
+
+    <!-- script qui appel la map -->
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyCLCyZdCatCyO348_1vXQr4yEQkDheyQ3A&callback=res"></script>
+    <script src="http://localhost/parcour-5/web/js/ajax.js"></script>
+    <script src="http://localhost/parcour-5/web/js/map-result.js"></script>
+    <script src="http://localhost/parcour-5/web/js/menu.js"></script>
 {% endblock %}
