--- a/views/frontend/index.html.twig
+++ b/views/frontend/index.html.twig
@@ -37,10 +37,12 @@
     </div>
 
 
+    <div id="map"></div>
+
 
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
     <script src="http://localhost/parcour-5/web/js/ajax.js"></script>
-    <script src="http://localhost/parcour-5/web/js/auto-complete.js"></script>
+    <script src="http://localhost/parcour-5/web/js/geocode.js"></script>
     <script type="text/javascript"
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCLCyZdCatCyO348_1vXQr4yEQkDheyQ3A&libraries=places&callback=initAutocomplete&"
             async defer></script>
