--- a/web/css/style.css
+++ b/web/css/style.css
@@ -17,6 +17,10 @@ body {
     color: white;
 }
 
+.none {
+    display: none;
+}
+
 .display {
     display: flex;
     justify-content: space-between;
